segfault on solaris-amd64 with "-XX:CompilerThreadStackSize=1" option

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b96

      TestOptionsWithRanges test failed during the PIT for JDK 9 b87 on solaris-amd64:
      Error processing option CompilerThreadStackSize with valid value '-XX:CompilerThreadStackSize=1'! JVM exited with unexpected error code = 11

      Running "java -XX:CompilerThreadStackSize=1" on the same host gave:
      -bash-4.1$ ./java -XX:CompilerThreadStackSize=1
      Segmentation Fault
      -bash-4.1$ echo $?
      139

            Assignee:
            Zoltan Majo (Inactive)
            Reporter:
            Dmitry Dmitriev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: