8140327: segfault on solaris-amd64 with "-XX:CompilerThreadStackSize=1" option

Update range for the CompilerThreadStackSize flag. Remove flag from testing.

Reviewed-by: kvn